--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,21 +116,7 @@ section{
     text-align: center;
     background: #fce138;
 }
-.section-title{
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
-}
-.primary-border{
-    border-color: #fce138;
-}
-.secondary-border{
-    border-color: #39a6b2;
-}
-.steps{
+.steps div{
     margin-bottom: 80px;
 }
 .steps img{
@@ -148,6 +134,20 @@ section{
 }
 .steps span{
     font-size: 38px;
+}
+.section-title{
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
+}
+.primary-border{
+    border-color: #fce138;
+}
+.secondary-border{
+    border-color: #39a6b2;
 }
 .trainers{
     text-align: center;
@@ -168,12 +168,6 @@ section{
     float: left;
     width: 65%;
 }
-.text-left{
-    text-align: left;
-}
-.text-right{
-    text-align: right;
-}
 .trainer-bio h3{
     font-size: 32px;
     margin-bottom: 8px;
@@ -186,4 +180,10 @@ section{
 .trainer-bio p{
     font-size: 17px;
     line-height: 1.3;
+}
+.text-left{
+    text-align: left;
+}
+.text-right{
+    text-align: right;
 }
