--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,3 +221,15 @@ section{
     color: #fce138;
 }
 /* REACH OUT STYLES END*/
+.hero{
+    margin: 20px;
+    background-color: white;
+    font-style: 20px;
+    color: blue;
+}
+.hero-secondary{
+    margin: 20px;
+    background-color: black;
+    font-size: 20px;
+    color: red;
+}
