--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,9 @@
-  :root {
+:root {
     --primary-color: #fce138;
     --secondary-color: #024e76;
     --tertiary-color: #39a6b2;
   }
+  
   * {
     box-sizing: border-box;
     margin: 0;
@@ -23,13 +24,13 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: -webkit-sticky;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
-    background-image: url('../images/hero-bg.jpg');
+    background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: 80%;
     background-attachment: fixed;
+    background-position: 80%;
     z-index: 9999;
   }
   
@@ -64,9 +65,9 @@
     font-size: 1.55vw;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
-
+  
   header nav ul li a:hover {
-    background: #fce138;
+    background: var(--primary-color);
     color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
@@ -78,7 +79,7 @@
   
   /* FOOTER STYLES START */
   footer {
-    background: #fce138;
+    background: var(--primary-color);
     padding: 40px 35px;
     display: flex;
     justify-content: space-between;
@@ -98,7 +99,7 @@
   }
   
   footer a {
-    color: #024e76;
+    color: var(--secondary-color);
   }
   /* END FOOTER STYLES */
   
@@ -111,12 +112,12 @@
   .hero {
     background-image: url('../images/hero-bg.jpg');
     background-size: cover;
-    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
     background-attachment: fixed;
+    background-position: 80%;
   }
   
   .hero-cta {
@@ -131,19 +132,23 @@
   .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   .hero-form {
-    border: 3px solid #024e76;
-    border-radius: 15px;
-    background-color: rgba(252, 225, 56, 0.8);
+    border: 3px solid var(--secondary-color);
+    background-color: rgba(255, 225, 56, 0.8);
     padding: 20px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 40%;
     margin: 3.5%;
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .hero-form button:hover {
+    background-color: var(--tertiary-color);  
   }
   
   .hero-form h3 {
@@ -155,20 +160,20 @@
   }
   
   .form-input {
-    background-color: rgba(255, 255, 255, 0.75);
-    border: 1px solid #024e76;
-    border-radius: 10px;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
     color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px; 
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
   }
-
+  
   .form-input:focus {
-      background-color: rgba(255, 255, 255, 1);
-      outline: none;
+    background-color: rgba(255,255,255, 1);
+    outline: none;
   }
   
   .hero-form label {
@@ -176,78 +181,73 @@
   }
   
   .hero-form button {
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
-    border-radius: 10px;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
   } 
-
-  .hero-form button:hover {
-    background-color: #39a6b2;  
-  }
-
+  
   .checkbox-wrapper input, .radio-wrapper input {
-      opacity: 0;
+    opacity: 0;
   }
-
+  
   .checkbox-wrapper label, .radio-wrapper label {
-      position: relative;
-      left: 10px;
-      margin: 10px;
-      line-height: 1.6;
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
   }
-
+  
   .checkbox-wrapper label::before, .radio-wrapper label::before {
-      content: "";
-      height: 20px;
-      width: 20px;
-      background: rgba(255, 255, 255, 0.75);
-      border: 1px solid #024e76;
-      position: absolute;
-      top: -4px;
-      left: -30px;
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);  
+    border: 1px solid var(--secondary-color);  
+    position: absolute;
+    top: -4px;
+    left: -30px;
   }
-
+  
   .radio-wrapper label::before {
-      border-radius: 50%;
+    border-radius: 50%;
   }
-
+  
   .radio-wrapper label::after {
-      content: "";
-      width: 20%;
-      height: 20px;
-      border-radius: 50%;
-      background: #024e76;
-      position: absolute;
-      left: -29px;
-      top: -3px;
-      background-image: radial-gradient(circle, #39a6b2, #024e76);
+    content: "";
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: var(--secondary-color);
+    position: absolute;
+    left: -29px;
+    top: -3px;
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
   }
-
+  
   .checkbox-wrapper label::after {
     content: "";
     height: 6px;
     width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
     transform: rotate(-58deg);
   }
-
+  
   .checkbox-wrapper input + label::after, 
   .radio-wrapper input + label::after {
-      content: none;
+    content: none;
   }
+  
   .checkbox-wrapper input:checked + label::after, 
   .radio-wrapper input:checked + label::after {
-      content: "";
+    content: "";
   }
-
-
   /* HERO STYLES END */
   
   
@@ -255,7 +255,7 @@
   .section-title {
     font-size: 48px;
     border-bottom: 3px solid;
-    color: #024e76;
+    color: var(--secondary-color);
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
@@ -263,16 +263,15 @@
   }
   
   .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
   }
   
   .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
   }
   /* SECTION TITLE STYLES END */
   
   /* WHAT WE DO STYLES */
-  
   .intro p {
     line-height: 1.7;
     color: var(--tertiary-color);
@@ -286,7 +285,7 @@
   
   /* WHAT YOU DO STYLES START */
   .steps { 
-    background: #fce138;
+    background: var(--primary-color);
   }
   
   .step {
@@ -298,13 +297,13 @@
     align-items: center;
     justify-content: space-between;
   }
-
-  .step:not(:last-child) {
-    border-bottom: 1px solid #39a6b2;
+  
+  .step:last-child {
+    border-bottom: none;
   }
   
   .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
   }
@@ -330,16 +329,15 @@
   }
   
   .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
   }
   
   .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
   }
-  
   /* WHAT YOU DO STYLES END */
   
   /* MEET THE TRAINERS START */
@@ -354,8 +352,8 @@
   .trainer {
     margin: 20px;
     flex: 1;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
   }
   
   .trainer img {
@@ -384,11 +382,11 @@
   
   /* REACH OUT STYLES START */
   .contact {
-    background: #024e76;
+    background: var(--secondary-color);
   }
   
   .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
   }
   
   .contact-info {
@@ -411,7 +409,7 @@
   }
   
   .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
   }
   
@@ -423,43 +421,42 @@
   }
   
   .contact-form input, .contact-form textarea {
-    background: rgba(255, 255, 255, 0.75);
-    border: 1px solid #024e76;
-    border-radius: 10px;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
   }
-
+  
   .contact-form input:focus, .contact-form textarea:focus {
-    background: rgba(255, 255, 255, 1);
+    background-color: rgba(255,255,255, 1);
+    outline: none;
   }
   
   .contact-form button {
     width: 100%;
     border: none;
-    border-radius: 10px;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
   }
-
+  
   .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
   }
   
   .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
   }
-  
-  
   /* REACH OUT STYLES END */
   
   /* UTILITIES */
@@ -551,6 +548,10 @@
     .step-text {
       flex: 100%;  
     }
+  
+    .trainer-bio h3, .trainer-bio h4 {
+      display: block;
+    }
   }
   
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@@ -583,3 +584,4 @@
       order: 3;
     }
   }
+    
